# repomind

./: .dockerignore  .gitignore  Dockerfile  PRODUCTION_READINESS_REPORT.md  README.md  chatbot.py  docker-compose.production.yml  docker-compose.yml  pyproject.toml  railway.json
backend/: analyzer.py  main.py  requirements.txt
backend/api/: dependencies.py  main.py
backend/api/routes/: agent.py  auth.py  crag.py  git.py  github.py  graphrag.py  health.py  imports.py  indexing.py  jobs.py  parser.py  query.py  relationships.py  repositories.py
backend/config/: __init__.py  settings.py
backend/core/agent/: __init__.py  executor.py  graph.py  planner.py  router.py  state.py  tools.py
backend/core/auth/: __init__.py  handler.py  jwt.py
backend/core/crag/: __init__.py  evaluator.py  graph.py  models.py  planner.py  retriever.py  service.py
backend/core/git/: __init__.py  collector.py  diff_parser.py  exceptions.py  models.py  service.py  timeline.py
backend/core/github/: __init__.py  client.py  collector.py  models.py  retriever.py  search.py  service.py  sync.py  timeline.py
backend/core/graphrag/: graph.py  (+8 more)
backend/database/: __init__.py  database.py  models.py  repositories.py  session.py
backend/schemas/: __init__.py  agent.py  auth.py  crag.py  git.py  github.py  graphrag.py  indexing.py  ingestion.py  parser.py  query.py  relationships.py
backend/utils/: __init__.py  logging.py
cli/: main.py
tests/: test_agent.py  test_ai_features_integration.py  test_complete_ai_features.py  test_context_builder.py  test_crag.py  test_document_builder.py  test_git.py  test_github.py  test_graphrag.py  test_ollama_client.py  test_parser_factory.py  test_python_parser.py  test_query_analyzer.py  test_relationship_visitor.py  test_retrieval.py  test_simple_debug.py
(+54 files in other folders)
